syntax = "proto3";

package grpc;


option java_multiple_files = true;
option java_package = "grpc";

import "google/protobuf/empty.proto";

service Coordinator {
  rpc RequestTask (google.protobuf.Empty) returns (Task);

  rpc MapDone (MapResponse) returns (google.protobuf.Empty);
  rpc ReduceDone (ReduceResponse) returns (google.protobuf.Empty);
}

service Worker {
  rpc ReadIntermediateFile (IntermediateFile) returns (IntermediateFileContent);  
}

message Task {
  oneof sealed_value {
    MapTask map = 1;
    ReduceTask reduce = 2;
    NoopTask noop = 3;
    ShutdownTask shutdown = 4;
  }
}

message MapTask {
  string id = 1;
  int32 reducerCount = 2;
  DistributedFile inputFile = 3;
}

message ReduceTask {
  string id = 1;
  repeated IntermediateFile intputFiles = 2;
}

message NoopTask {
  string id = 1;
}

message ShutdownTask {
  string id = 1;
}

message MapResponse {
  string id = 1;
  repeated IntermediateFile results = 2;
}

message ReduceResponse {
  string id = 1;
  DistributedFile outputFile = 2;
}

message DistributedFile {
  string filename = 1;
}

message IntermediateFile {
  int32 partition = 1;
  string filename = 2;
  int32 port = 3;
}


message IntermediateFileContent {
  string content = 1;
}